fixed alignment of icons on header for 320 screen resolution

--- a/src/App.less
+++ b/src/App.less
@@ -832,9 +832,9 @@ li.ant-menu-item.ant-menu-item-only-child.home {
     display: none;
   }
 
-  .header .right-side-menu {
-    margin-left: 10px;
-  }
+  //.header .right-side-menu {
+  //  margin-left: 10px;
+  //}
 
   .ant-select-selector {
     width: 80% !important;
@@ -874,19 +874,31 @@ li.ant-menu-item.ant-menu-item-only-child.home {
 
 @media (min-device-width: 350px) and (max-device-width: 374px) {
   .header .right-side-menu {
-    margin-left: 5px;
+    margin-left: -10px;
+  }
+
+  .ant-avatar-lg.ant-avatar-icon {
+    margin-right: -10px;
   }
 }
 
 @media (min-device-width: 337px) and (max-device-width: 349px) {
   .header .right-side-menu {
-    margin-left: -5px;
+    margin-left: -10px;
+  }
+
+  .header .add-club-button {
+    width: 139px;
   }
 }
 
-@media (min-device-width: 319px) and (max-device-width: 336px) {
+@media (min-device-width: 330px) and (max-device-width: 336px) {
   .header .right-side-menu {
     margin-left: -20px;
+  }
+
+  .header .add-club-button {
+    width: 139px;
   }
 }
 
